--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_home">Home</string>
     <string name="title_wallet">Wallet</string>
     <string name="title_recommended">Recommended</string>
+    <string name="title_Add_Card_To_Wallet">Add Card</string>
 </resources>
