--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="title_wallet">Wallet</string>
     <string name="title_recommended">Recommended</string>
     <string name="title_Add_Card_To_Wallet">Add Card</string>
+    <string name="enter_card_name">Enter the name of the card</string>
+    <string name="add_card_done">Done</string>
 </resources>
