Apply intent material from WordRoom project

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_Add_Card_To_Wallet">Add Card</string>
     <string name="enter_card_name">Enter card name</string>
     <string name="add_card_done">Done</string>
+    <string name="empty_not_saved">Card not saved. Name empty</string>
 </resources>
