--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="enter_card_name">Enter card name</string>
     <string name="add_card_done">Done</string>
     <string name="empty_not_saved">Card not saved. Name empty</string>
+    <string name="delete_card">Delete Card</string>
 </resources>
