--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="delete_card">Delete Card</string>
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
+    <string name="don_t_see_your_card_add_your_own">Don\'t see your card? Add your own</string>
 </resources>
