--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="delete">Delete</string>
     <string name="don_t_see_your_card_add_your_own">Don\'t see your card? Add your own!</string>
     <string name="add_a_card">Add a Card</string>
+    <string name="card_already_exists">Card already exists</string>
 </resources>
