--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="earn_rate">Earn Rate</string>
     <string name="general">General:</string>
     <string name="default_earn_rate">1.0</string>
+    <string name="choose_a_category">Choose a Category</string>
 </resources>
